# rnn-next-word-prediction

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: tiny_corpus.txt
src/: data.py  model.py  sample.py  train.py
