[project]
name = "rnn-next-word-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]
